--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
 h1, h2 {
     color: black;
+    text-align: center;
 }
 
 h3 {
@@ -140,7 +141,7 @@ nav {
 
 .about-me {
     max-height: min-content;
-    min-width: 400px;
+    min-width: 310px;
     border: 2px solid black;
     border-radius: 12px;
     width: 30%;
